// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match snapshot 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c8:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c8:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c8:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c12 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c13 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c13 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c13 .c7:first-child {
  margin-left: 0;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
  margin: 0;
  padding-left: 0;
  padding-bottom: 3px;
  padding-top: 5px;
}

.c11 {
  position: relative;
  padding-left: 6px;
  padding-right: 6px;
  z-index: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11 ul {
  position: absolute;
  left: 0;
  color: #0a0a0a;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <ul
        class="c10"
      >
        <li
          class="c11"
        >
          File
        </li>
        <li
          class="c11"
        >
          Edit
        </li>
      </ul>
      <div
        class="c12"
      >
        Hello
      </div>
      <div
        class="c13"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals center 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c8:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c8:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c8:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c11 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c11 .c7:first-child {
  margin-left: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        Hello
      </div>
      <div
        class="c11"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals flex-start 1`] = `
.c8 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c8:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c8:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c8:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c8:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c8:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c8:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 320px;
  height: auto;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c9 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

.c11 {
  padding: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c11 .c7 {
  margin-left: 6px;
  min-width: 70px;
}

.c11 .c7:first-child {
  margin-left: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="auto"
      width="320"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8 c9"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c10"
      >
        Hello
      </div>
      <div
        class="c11"
      >
        <button
          class="c7 c8"
          font-size="12px"
          value="Ok"
        >
          Ok
        </button>
        <button
          class="c7 c8"
          font-size="12px"
          value="Cancel"
        >
          Cancel
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with different activeWindow 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 300px;
  height: 200px;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="200"
      width="300"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        Hello
      </div>
    </section>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with width and height props 1`] = `
.c7 {
  background-color: #c6c6c6;
  color: #0a0a0a;
  padding: 7px 20px 5px;
  min-width: 70px;
  font-size: 12px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #fefefe;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #fefefe;
}

.c7:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #dfdfdf;
  border-right-color: #848584;
  border-bottom-color: #848584;
  border-left-color: #dfdfdf;
  pointer-events: none;
}

.c7:disabled {
  color: #848584;
  background-color: #9a9e9c;
}

.c7:focus {
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
}

.c7:active {
  padding: 8 20 4;
  outline: 1px dotted #0a0a0a;
  outline-offset: -5px;
  position: relative;
  border-width: 2px;
  border-style: solid;
  border-top-color: #848584;
  border-right-color: #fefefe;
  border-bottom-color: #fefefe;
  border-left-color: #848584;
}

.c7:active:before {
  content: '';
  position: absolute;
  left: -1px;
  top: -1px;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-width: 1px;
  border-top-color: #0a0a0a;
  border-right-color: #dfdfdf;
  border-bottom-color: #dfdfdf;
  border-left-color: #0a0a0a;
  pointer-events: none;
}

.c7:not(:last-child) {
  margin-right: 6px;
}

.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c1 {
  position: relative;
  border-width: 1px;
  border-style: solid;
  border-top-color: #dfdfdf;
  border-right-color: #0a0a0a;
  border-bottom-color: #0a0a0a;
  border-left-color: #dfdfdf;
  box-shadow: inset -1px -1px 0 0px  #848584 , inset 1px 1px 0 0px  #fefefe;
  background: #c6c6c6;
  color: #0a0a0a;
  width: 300px;
  height: 200px;
  padding: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  top: 50px;
  background-color: #9a9e9c;
}

.c2 {
  height: 20px;
  padding: 1px;
  margin-bottom: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7f787f;
  color: #c6c6c6;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
  line-height: 1.4em;
  margin: 0;
  font-size: 1em;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 2px;
}

.c6:first-child {
  margin-right: 0;
}

.c8 {
  padding: 0;
  width: 17px;
  height: 16px;
  min-width: 0;
  font-size: 10px;
  font-weight: 600;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 2px;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <section
      class="c1"
      direction="column"
      height="200"
      width="300"
    >
      <div
        class="c2 draggable"
      >
        <i
          class="c3"
          data-icon-name="bat"
          height="13"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="15"
        />
        <h1
          class="c4"
        >
          file.bat
        </h1>
        <ul
          class="c5"
        >
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              ?
            </button>
          </li>
          <li
            class="c6"
          >
            <button
              class="c7 c8"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="c9"
      >
        Hello
      </div>
    </section>
  </div>
</div>
`;
